manifests/base/webhook/admission_webhook_patch.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: sart-validating-webhook-configuration
webhooks:
- name: vbgppeer.kb.io
  clientConfig:
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJuekNDQVVXZ0F3SUJBZ0lWQUtTMmNUQmJMWjAySkIySkF5cm1GZElsbHlkUU1Bb0dDQ3FHU000OUJBTUMKTUNFeEh6QWRCZ05WQkFNTUZuSmpaMlZ1SUhObGJHWWdjMmxuYm1Wa0lHTmxjblF3SUJjTk1qUXdNekV6TURJdwpNalEwV2hnUE1qRXlOREF5TVRnd01qQXlORFJhTUNFeEh6QWRCZ05WQkFNTUZuSmpaMlZ1SUhObGJHWWdjMmxuCmJtVmtJR05sY25Rd1dUQVRCZ2NxaGtqT1BRSUJCZ2dxaGtqT1BRTUJCd05DQUFRZFVIaGcyelRNNXM3RVhneWQKOVBFQUNKQjRzd2JybGRBR1N1WS91SHRNOGpQRDFUY3pyZURDbm5mTDJBRXZYbk1NcTRQM0RhSm1mR28raDZucgpBU0RvbzFnd1ZqQ [...]
- name: vbgpadvertisement.kb.io
  clientConfig:
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJuekNDQVVXZ0F3SUJBZ0lWQUtTMmNUQmJMWjAySkIySkF5cm1GZElsbHlkUU1Bb0dDQ3FHU000OUJBTUMKTUNFeEh6QWRCZ05WQkFNTUZuSmpaMlZ1SUhObGJHWWdjMmxuYm1Wa0lHTmxjblF3SUJjTk1qUXdNekV6TURJdwpNalEwV2hnUE1qRXlOREF5TVRnd01qQXlORFJhTUNFeEh6QWRCZ05WQkFNTUZuSmpaMlZ1SUhObGJHWWdjMmxuCmJtVmtJR05sY25Rd1dUQVRCZ2NxaGtqT1BRSUJCZ2dxaGtqT1BRTUJCd05DQUFRZFVIaGcyelRNNXM3RVhneWQKOVBFQUNKQjRzd2JybGRBR1N1WS91SHRNOGpQRDFUY3pyZURDbm5mTDJBRXZYbk1NcTRQM0RhSm1mR28raDZucgpBU0RvbzFnd1ZqQ [...]
- name: vaddresspool.kb.io
  clientConfig:
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJuekNDQVVXZ0F3SUJBZ0lWQUtTMmNUQmJMWjAySkIySkF5cm1GZElsbHlkUU1Bb0dDQ3FHU000OUJBTUMKTUNFeEh6QWRCZ05WQkFNTUZuSmpaMlZ1SUhObGJHWWdjMmxuYm1Wa0lHTmxjblF3SUJjTk1qUXdNekV6TURJdwpNalEwV2hnUE1qRXlOREF5TVRnd01qQXlORFJhTUNFeEh6QWRCZ05WQkFNTUZuSmpaMlZ1SUhObGJHWWdjMmxuCmJtVmtJR05sY25Rd1dUQVRCZ2NxaGtqT1BRSUJCZ2dxaGtqT1BRTUJCd05DQUFRZFVIaGcyelRNNXM3RVhneWQKOVBFQUNKQjRzd2JybGRBR1N1WS91SHRNOGpQRDFUY3pyZURDbm5mTDJBRXZYbk1NcTRQM0RhSm1mR28raDZucgpBU0RvbzFnd1ZqQ [...]
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: sart-mutating-webhook-configuration
webhooks:
- name: mbgppeer.kb.io
  clientConfig:
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJuekNDQVVXZ0F3SUJBZ0lWQUtTMmNUQmJMWjAySkIySkF5cm1GZElsbHlkUU1Bb0dDQ3FHU000OUJBTUMKTUNFeEh6QWRCZ05WQkFNTUZuSmpaMlZ1SUhObGJHWWdjMmxuYm1Wa0lHTmxjblF3SUJjTk1qUXdNekV6TURJdwpNalEwV2hnUE1qRXlOREF5TVRnd01qQXlORFJhTUNFeEh6QWRCZ05WQkFNTUZuSmpaMlZ1SUhObGJHWWdjMmxuCmJtVmtJR05sY25Rd1dUQVRCZ2NxaGtqT1BRSUJCZ2dxaGtqT1BRTUJCd05DQUFRZFVIaGcyelRNNXM3RVhneWQKOVBFQUNKQjRzd2JybGRBR1N1WS91SHRNOGpQRDFUY3pyZURDbm5mTDJBRXZYbk1NcTRQM0RhSm1mR28raDZucgpBU0RvbzFnd1ZqQ [...]
- name: maddressblock.kb.io
  clientConfig:
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJuekNDQVVXZ0F3SUJBZ0lWQUtTMmNUQmJMWjAySkIySkF5cm1GZElsbHlkUU1Bb0dDQ3FHU000OUJBTUMKTUNFeEh6QWRCZ05WQkFNTUZuSmpaMlZ1SUhObGJHWWdjMmxuYm1Wa0lHTmxjblF3SUJjTk1qUXdNekV6TURJdwpNalEwV2hnUE1qRXlOREF5TVRnd01qQXlORFJhTUNFeEh6QWRCZ05WQkFNTUZuSmpaMlZ1SUhObGJHWWdjMmxuCmJtVmtJR05sY25Rd1dUQVRCZ2NxaGtqT1BRSUJCZ2dxaGtqT1BRTUJCd05DQUFRZFVIaGcyelRNNXM3RVhneWQKOVBFQUNKQjRzd2JybGRBR1N1WS91SHRNOGpQRDFUY3pyZURDbm5mTDJBRXZYbk1NcTRQM0RhSm1mR28raDZucgpBU0RvbzFnd1ZqQ [...]
- name: mservice.kb.io
  clientConfig:
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJuekNDQVVXZ0F3SUJBZ0lWQUtTMmNUQmJMWjAySkIySkF5cm1GZElsbHlkUU1Bb0dDQ3FHU000OUJBTUMKTUNFeEh6QWRCZ05WQkFNTUZuSmpaMlZ1SUhObGJHWWdjMmxuYm1Wa0lHTmxjblF3SUJjTk1qUXdNekV6TURJdwpNalEwV2hnUE1qRXlOREF5TVRnd01qQXlORFJhTUNFeEh6QWRCZ05WQkFNTUZuSmpaMlZ1SUhObGJHWWdjMmxuCmJtVmtJR05sY25Rd1dUQVRCZ2NxaGtqT1BRSUJCZ2dxaGtqT1BRTUJCd05DQUFRZFVIaGcyelRNNXM3RVhneWQKOVBFQUNKQjRzd2JybGRBR1N1WS91SHRNOGpQRDFUY3pyZURDbm5mTDJBRXZYbk1NcTRQM0RhSm1mR28raDZucgpBU0RvbzFnd1ZqQ [...]
